Closed
Bug 345699
Opened 19 years ago
Closed 19 years ago
ASSERTION: bad geometric parent: 'mFrames.ContainsFrame(aNextInFlow)', file nsContainerFrame.cpp, line 870
Categories
(Core :: Layout: Block and Inline, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)
Details
(Keywords: assertion)
ASSERTION: bad geometric parent: 'mFrames.ContainsFrame(aNextInFlow)',
file nsContainerFrame.cpp, line 870
STEPS TO REPRODUCE
1. load "Original testcase" in bug 344557
I think the assertion on line 870 is incorrect and should be removed:
http://bonsai.mozilla.org/cvsblame.cgi?file=/mozilla/layout/generic/nsContainerFrame.cpp&rev=1.260&root=/cvsroot&mark=870,893,894,900#865
We will get the assertion when the frame |aNextInFlow| is on the overflow
list. If it can't be found on the overflow list either then we already
have an assertion for that which is correct (line 900).
I agree, r+ on removing it :-)
I agree, r+sr on removing it :-)
Assignee | ||
Comment 3•19 years ago
|
||
Fixed on trunk
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•