Removed a bogus assertion. b=345699 r+sr=roc